Bug 1205466, make HasApzAwareListeners check faster, r=masayuki